--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - main
-      - master
-    tags:
-      - '*'
-  pull_request:
-    branches:
-      - main
-      - master
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
@@ -29,10 +19,10 @@ jobs:
           cp -R .sourceknight/package/* /tmp/package
           cp -R addons/sourcemod/configs /tmp/package/common/addons/sourcemod/
 
-      - name: Upload package
+      - name: Upload build archive for test runners
         uses: actions/upload-artifact@v4
         with:
-          name: package
+          name: ${{ runner.os }}
           path: /tmp/package
 
   tag:
@@ -60,13 +50,14 @@ jobs:
   release:
     name: Release
     if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
-    needs:
-      - build
-      - tag
+    needs: [build, tag]
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v5
+        with:
+          name: ${{ runner.os }}
+          path: artifacts
 
       - name: Versioning
         run: |
@@ -78,12 +69,11 @@ jobs:
 
       - name: Package
         run: |
+          cd artifacts
           ls -Rall
-          if [ -d "./package/" ]; then
-            cd ./package/
-            tar -czf ../${{ github.event.repository.name }}-${{ env.RELEASE_VERSION }}.tar.gz -T <(\ls -1)
-            cd -
-          fi
+          tar -czf ../${{ github.event.repository.name }}-${{ env.RELEASE_VERSION }}.tar.gz .
+          cd ..
+          ls -la *.tar.gz
 
       - name: Release
         uses: svenstaro/upload-release-action@v2
